lab1/Test/L1-A-12-93.output
Error Type A at Line 1
Error Type B at Line 9
Error Type B at Line 14
Error Type A at Line 35
