lab1/Test/L1-A-12-93.cmm
int m65UxK @
;
int ;
int ;
struct {
  int DfSn4J8 ;
  int fA ;
};
int ( struct uZyJ xkUp ) {
  float vvYS97xJNU5bv , i6lIy [ 1763756857 ] = JacCZMpt8VP 
    = BNM__NYnv || EVbrWkECcDC26R3 > - ! JK6 ( WKI7jdlv8DfMHk 
    , YbRLR && tay1tkIcxk2Y0WXpCsG < VC + Cy91gvq0 / LOyM 
    [ DK4 = WYKyoN3H0fFZ0LNcX5FL || or == QvmmiMdOXsQjv7YeW 
    * ! [ gm0fGrYVtjbxVS >= ( ykqPzdNd_u <= mZHHC3K ) 
    ] || 532941245.579043046 != QssPhT5V . UoeTZNGCEw 
    - - 1939064413 ] ) * n19EI0ZiE ( ) ;
}
int tPsvHGPtGjU , qGtBC8 

;
int ;
int ;
int k4GUvpHzINru71u4BIz ( ) {
  while ( b7MqHcLKsH_Xs )   c6STd ;

}
struct o0tlPrilbb36HpGeEF33 {
};
int zXL ( int Yefb , int WmteeyU2IFpcpUnq ) {
  fLv3Vi4AEOvcsUuP ;
  if ( ljJb_3gL3rfUWOZ )   if ( vsz2Xns )   PmPaHkc7q 
    ;
else   return MP3747USPkt1 ;

else   if ( Gbrucj4rXEDk @) {
  }

}
int ;
